--- a/app.css
+++ b/app.css
@@ -31,7 +31,7 @@
 
 header{
   text-align: center;
-  background:#46C8F8;
+  background:#f4f4f4;
   padding:20px;
   margin-bottom:0;
 }
@@ -56,7 +56,7 @@ header h1{
 }
 
 .details img{
-  width:100%;
+  width:60%;
 }
 
 .actions{
@@ -67,4 +67,8 @@ header h1{
 
 .back{
   margin-left:10px;
+}
+
+.img{
+  width: 50px;
 }
